test-resources/invalid-project/src/main/java/test/group/id/LTRI.java
package test.group.id;

/**
 * ⁦
 * Bidi characters above
 */
public class LTRI
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
